--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,124 @@
 body {
     background-color: seagreen;
 }
+
+.bodyDiv {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.gameContainer {
+    background-color: rgb(161, 183, 204);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+    margin-top: 20px;
+    padding: 20px;
+
+    border: 3px black solid;
+    border-radius: 5px;
+    box-shadow: 0px 0px 19px 12px rgba(0, 0, 0, 0.64);
+    width: 25%;
+
+}
+
+.titleLog {
+    font-size: 150%;
+    margin: 10px;
+    width: 90%;
+    height: 30%;
+    min-height: 20%;
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+
+}
+
+.buttonContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+button {
+    font-size: 24px;
+    width: 25%;
+    height: 100%;
+}
+
+button:active {
+    transform: scale(1.2);
+}
+
+.player {
+    image-rendering: pixelated;
+    width: 150px;
+    height: 220px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.arenaContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+
+.fighters {
+    margin: 0px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.platform {
+    border: 2px black solid;
+    margin: 0px;
+    background-color: green;
+    height: 50px;
+}
+
+.arrow {
+    image-rendering: pixelated;
+}
+
+.idArrowContainer {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+    margin-top: 10%;
+    margin-bottom: 2%;
+}
+
+.idArrow {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.idArrow>* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.status {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 50px;
+    max-width: 10%;
+    min-width: 10%;
+    align-self: center;
+
+}
+
+.playerChoice {
+    image-rendering: pixelated;
+    width: 250px;
+}
+
+.botChoice {
+    image-rendering: pixelated;
+    width: 250px;
+}
