--- a/styles.css
+++ b/styles.css
@@ -88,8 +88,8 @@ button:active {
 
 .idArrowContainer {
     display: flex;
-    width: 80%;
-    justify-content: space-between;
+    width: 100%;
+    justify-content: space-evenly;
     margin-top: 10%;
     margin-bottom: 2%;
 }
@@ -100,8 +100,10 @@ button:active {
     justify-content: center;
 }
 
-.idArrow>* {
+.scoreContainer {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    gap: 20px;
 }
 
 .status {
@@ -110,7 +112,14 @@ button:active {
     max-width: 10%;
     min-width: 10%;
     align-self: center;
+}
 
+.winnerText {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    max-width: 10%;
+    min-width: 10%;
+    align-self: center;
 }
 
 .playerChoice {
@@ -121,4 +130,9 @@ button:active {
 .botChoice {
     image-rendering: pixelated;
     width: 250px;
+}
+
+.roundText {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 50px;
 }
